--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/native": "^7.0.14",
     "@shopify/flash-list": "1.7.1",
     "babel-plugin-inline-import": "^3.0.0",
@@ -66,7 +67,6 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-mmkv": "3.2.0",
     "react-native-reanimated": "~3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
