--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@bacons/text-decoder": "^0.0.0",
+    "@google/generative-ai": "^0.22.0",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@hookform/resolvers": "^3.10.0",
     "@paralleldrive/cuid2": "^2.2.2",
@@ -44,7 +45,8 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "0.38.4",
     "drizzle-zod": "^0.5.1",
-    "expo": "~52.0.27",
+    "expo": "^52.0.37",
+    "expo-camera": "~16.0.17",
     "expo-dev-client": "~5.0.10",
     "expo-font": "~13.0.3",
     "expo-intent-launcher": "~12.0.2",
